--- a/src/main/resources/templates/UserPage.html
+++ b/src/main/resources/templates/UserPage.html
@@ -1,6 +1,8 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
 <body bgcolor=" #a6b259 ">
+<div th:fragment="content">
 <div style="text-align:center">
 <p >
 <h2 >Welcome to User Page </h2>
@@ -16,7 +18,7 @@
 <form id="search">
  <input type="submit" name="action" value="search">
 </form>
-
+</div>
 </body>
 </head>
 </html>
