--- a/src/main/resources/templates/addTopic.html
+++ b/src/main/resources/templates/addTopic.html
@@ -1,6 +1,11 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
+  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <body bgcolor="#ffff8f">
+<div th:fragment="content">
 <div style="text-align:center">
 <p >
 <h2 >Add a New Topic </h2>
@@ -9,13 +14,29 @@
 
 
 
-<form id="add" action="topics">
-  <input type="text" name="id" placeholder="id"><br/><br/><br/>
-  <input type="text" name="name" placeholder="name"><br/><br/><br/>
-  <input type="text" name="description" placeholder="description"><br/><br/><br/>
+<form id="add" th:action="@{/addtopics}"   method="POST"  th:object="${topic}"  >
+  <input type="text" name="id" placeholder="id" th:field="*{id}"><br/><br/><br/>
+  <input type="text" name="name" placeholder="name" th:field="*{name}"><br/><br/><br/>
+  <input type="text" name="description" placeholder="description" th:field="*{description}"><br/><br/><br/>
   <input type="submit" name="action" value="add">
 </form>
+</div>
+<script>
+  function onSubmit( form ){
+  var serialized = $(form).serializeArray();
+        var s = '';
+        var data = {};
+        for(s in serialized){
+            data[serialized[s]['name']] = serialized[s]['value'];
+        }
+   data = JSON.stringify( data );
+    alert(data);
+  console.log( data );
+  return true; // submit
 
+
+}
+</script>
 </body>
 </head>
 </html>
