--- a/src/main/resources/templates/deleteTopic.html
+++ b/src/main/resources/templates/deleteTopic.html
@@ -1,6 +1,8 @@
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
 <body bgcolor="#ffff8f">
+<div th:fragment="content">
 <div style="text-align:center">
 <p >
 <h2 >Delete a Topic </h2>
@@ -9,11 +11,11 @@
 
 
 
-<form id="delete">
+<form id="delete" action="delete">
   <input type="text" name="id" placeholder="id"><br/><br/><br/>
   <input type="submit" name="action" value="delete">
 </form>
-
+</div>
 </body>
 </head>
 </html>
