--- a/src/main/resources/templates/deleteTopic.html
+++ b/src/main/resources/templates/deleteTopic.html
@@ -8,14 +8,22 @@
 <h2 >Delete a Topic </h2>
 </p>
 </div>
+  <div style="float:right">
+    <form align="right" name="logoutForm" method="post" action="\logout">
+      <label class="logoutLblPos">
+        <input name="submit2" type="submit" id="submit2" value="Log out"><br/><br/><br/>
+      </label>
+    </form>
+  </div>
 
 
-
-<form id="delete" action="delete">
-  <input type="text" name="id" placeholder="id"><br/><br/><br/>
-  <input type="submit" name="action" value="delete">
+<form id="delete" action="delete" onsubmit="setAction(this)">
+  <input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
+  <input type="submit" name="delete" value="delete">
 </form>
 </div>
+<script src="js/custom.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
 </body>
 </head>
 </html>
