--- a/src/main/resources/templates/updateTopic.html
+++ b/src/main/resources/templates/updateTopic.html
@@ -9,15 +9,23 @@
 </p>
 </div>
 
+  <div style="float:right">
+    <form align="right" name="logoutForm" method="post" action="\logout">
+      <label class="logoutLblPos">
+        <input name="submit2" type="submit" id="submit2" value="Log out"><br/><br/><br/>
+      </label>
+    </form>
+  </div>
 
-
-<form id="update">
-  <input type="text" name="id" placeholder="id"><br/><br/><br/>
+<form id="update" method="put" onsubmit="setActionForUpdate(this)">
+  <input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
   <input type="text" name="name" placeholder="name"><br/><br/><br/>
   <input type="text" name="description" placeholder="description"><br/><br/><br/>
-  <input type="submit" name="action" value="update">
+  <input type="submit" name="update" value="update">
 </form>
 </div>
+<script src="js/custom.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.3.min.js" ></script>
 </body>
 </head>
 </html>
