--- a/src/main/resources/templates/searchTopic.html
+++ b/src/main/resources/templates/searchTopic.html
@@ -1,7 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-
+    <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <body bgcolor="#ffff8f">
 <div th:fragment="content">
 <div style="text-align:center">
@@ -20,7 +21,7 @@
 
 <form id="search-form" method="get" onsubmit="setAction(this)">
   <input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
-  <input type="submit" name="search" value="search id">
+  <input type="submit" name="search" value="search">
 </form>
 </div>
 <script src="js/custom.js"></script>
