--- a/src/main/resources/templates/updateTopic.html
+++ b/src/main/resources/templates/updateTopic.html
@@ -1,6 +1,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
+  <meta http-equiv="Content-Type" content="text/html" charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <body bgcolor="#ffff8f">
 <div th:fragment="content">
 <div style="text-align:center">
