--- a/src/main/resources/templates/AdminPage.html
+++ b/src/main/resources/templates/AdminPage.html
@@ -28,20 +28,24 @@
 </form>
 </p>
 </div>
+    <!--<div sec:authentication="name"></div> &lt;!&ndash; works fine &ndash;&gt;
+    <div sec:authentication="principal.authorities"></div> &lt;!&ndash; works fine &ndash;&gt;
 
-    <div sec:authentication="name"></div> <!-- works fine -->
-    <div sec:authentication="principal.authorities"></div> <!-- works fine -->
+    <div  sec:authorize="isAuthenticated()" >true</div>
+    <span th:text="${#authorization.expression('isAuthenticated()')}"></span> &lt;!&ndash; works fine &ndash;&gt;
 
-    <div  sec:authorize="isAuthenticated()" >true</div> <!-- works fine -->
-    <span th:text="${#authorization.expression('isAuthenticated()')}"></span> <!-- works fine -->
+    <div th:text="${#vars.role_user}"> Admin</div> &lt;!&ndash;Works fine &ndash;&gt;
+    <div  sec:authorize="${hasRole('USER')}" > IS USER </div> &lt;!&ndash; Doesnt work &ndash;&gt;
+    <div  sec:authorize="hasAuthority('USER')" > IS ADMIN </div> &lt;!&ndash; Doesnt work &ndash;&gt;
+    <div th:text="${#authorization.expression('hasRole(''ADMIN'')')} ">check</div> &lt;!&ndash; Doesnt work &ndash;&gt;
+    <div th:text="${#authorization.expression('hasRole(#vars.role_admin)')}"></div> &lt;!&ndash; Doesnt work &ndash;&gt;-->
 
-    <div th:text="${#vars.role_user}"> Admin</div> <!--Works fine -->
-    <div  sec:authorize="${hasRole('USER')}" > IS USER </div> <!-- Doesnt work -->
-    <div  sec:authorize="hasAuthority('USER')" > IS ADMIN </div> <!-- Doesnt work -->
-    <div th:text="${#authorization.expression('hasRole(''ADMIN'')')} ">check</div> <!-- Doesnt work -->
-    <div th:text="${#authorization.expression('hasRole(#vars.role_admin)')}"></div> <!-- Doesnt work -->
 
-    <div id="userDiv"   sec:authorize="hasAuthority('USER')" >
+  <!--  <div  sec:authorize="isAuthenticated()" >true</div>
+    <div  sec:authorize="hasAuthority('USER')" > IS ADMIN </div>
+    <div  sec:authorize="${hasRole('USER')}" > IS USER </div>-->
+
+    <div id="userDiv"   style="display:none;" >
         <form id="get" action="\topics" method="get">
             <input type="submit" name="get" value="get">
         </form>
