--- a/src/main/resources/templates/deleteTopic.html
+++ b/src/main/resources/templates/deleteTopic.html
@@ -10,6 +10,11 @@
 <h2 >Delete a Topic </h2>
 </p>
 </div>
+
+  <div id="demo1" style="float:left" >
+
+  </div>
+
   <div style="float:right">
     <form align="right" name="logoutForm" method="post" action="\logout">
       <label class="logoutLblPos">
@@ -19,8 +24,8 @@
   </div>
 
 
-<form id="delete" action="delete" onsubmit="setAction(this)">
-  <input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
+<form id="delete-form"  action="#" onsubmit="return setActionDelete(this)">
+  <br/> <br/><br/><input id="Id" type="text" name="id" placeholder="id"><br/><br/>
   <input type="submit" name="delete" value="delete">
 </form>
 </div>
