--- a/src/main/resources/templates/searchTopic.html
+++ b/src/main/resources/templates/searchTopic.html
@@ -19,7 +19,7 @@
     </div>
 
 
-<form id="search-form" method="get" onsubmit="setAction(this)">
+<form id="search-form" method="get" onsubmit="setActionSearch(this)">
   <input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
   <input type="submit" name="search" value="search">
 </form>
