--- a/src/main/resources/templates/updateTopic.html
+++ b/src/main/resources/templates/updateTopic.html
@@ -19,7 +19,7 @@
     </form>
   </div>
 
-<form id="update" method="put" onsubmit="setActionForUpdate(this)">
+<form id="update-form" name="update" method="put" onsubmit="setActionUpdate(this)">
   <input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
   <input type="text" name="name" placeholder="name"><br/><br/><br/>
   <input type="text" name="description" placeholder="description"><br/><br/><br/>
