--- a/src/main/resources/templates/addTopic.html
+++ b/src/main/resources/templates/addTopic.html
@@ -12,6 +12,10 @@
 <h2 >Add a New Topic </h2>
 </p>
 </div>
+    <div id="demo1" style="float:left" >
+
+    </div>
+
   <div style="float:right">
     <form align="right" name="logoutForm" method="post" action="\logout">
       <label class="logoutLblPos">
@@ -19,11 +23,11 @@
       </label>
     </form>
   </div>
-  <div sec:authorize="hasRole('USER')">Text visible to user ...<span th:text ="${#authentication.getPrincipal().getUsername()}"></span></div>
-  <div sec:authorize="hasRole('ADMIN123')">Text visible to admin.</div>
+  <!--<div sec:authorize="hasRole('USER')">Text visible to user ...<span th:text ="${#authentication.getPrincipal().getUsername()}"></span></div>
+  <div sec:authorize="hasRole('ADMIN123')">Text visible to admin.</div>-->
 
-<form   action="/topics"   method="post"  th:object="${topic}"  >
-  <input type="text" name="id" placeholder="id" th:field="*{id}"><br/><br/><br/>
+<form   action="/topics"   method="post"  th:object="${topic}" onsubmit="return setAddDetails(this)" >
+    <br/><br/> <input type="text" name="id" placeholder="id" th:field="*{id}"><br/><br/><br/>
   <input type="text" name="name" placeholder="name" th:field="*{name}"><br/><br/><br/>
   <input type="text" name="description" placeholder="description" th:field="*{description}"><br/><br/><br/>
   <input type="submit" name="add" value="add">
