--- a/src/main/resources/templates/addTopic.html
+++ b/src/main/resources/templates/addTopic.html
@@ -17,7 +17,7 @@
     </div>
 
   <div style="float:right">
-    <form align="right" name="logoutForm" method="post" action="\logout">
+    <form  align="right" name="logoutForm" method="post" action="\logout">
       <label class="logoutLblPos">
         <input name="submit2" type="submit" id="submit2" value="Log out"><br/><br/><br/>
       </label>
@@ -26,7 +26,7 @@
   <!--<div sec:authorize="hasRole('USER')">Text visible to user ...<span th:text ="${#authentication.getPrincipal().getUsername()}"></span></div>
   <div sec:authorize="hasRole('ADMIN123')">Text visible to admin.</div>-->
 
-<form   action="/topics"   method="post"  th:object="${topic}" onsubmit="return setAddDetails(this)" >
+<form  id='add-form' action="/topics"   method="post"  th:object="${topic}" onsubmit="return setAddDetails(this)" >
     <br/><br/> <input type="text" name="id" placeholder="id" th:field="*{id}"><br/><br/><br/>
   <input type="text" name="name" placeholder="name" th:field="*{name}"><br/><br/><br/>
   <input type="text" name="description" placeholder="description" th:field="*{description}"><br/><br/><br/>
