--- a/src/main/resources/templates/deleteTopic.html
+++ b/src/main/resources/templates/deleteTopic.html
@@ -24,7 +24,7 @@
   </div>
 
 
-<form id="delete-form"  action="#" onsubmit="return setActionDelete(this)">
+<form id="delete-form"  action="" onsubmit="return setActionDelete(this)">
   <br/> <br/><br/><input id="Id" type="text" name="id" placeholder="id"><br/><br/>
   <input type="submit" name="delete" value="delete">
 </form>
