--- a/src/main/resources/templates/updateTopic.html
+++ b/src/main/resources/templates/updateTopic.html
@@ -10,7 +10,9 @@
 <h2 >Update a Topic </h2>
 </p>
 </div>
+  <div id="demo1" style="float:left" >
 
+  </div>
   <div style="float:right">
     <form align="right" name="logoutForm" method="post" action="\logout">
       <label class="logoutLblPos">
@@ -19,8 +21,8 @@
     </form>
   </div>
 
-<form id="update-form" name="update" method="put" onsubmit="setActionUpdate(this)">
-  <input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
+<form id="update-form" name="update"  onsubmit="return setActionUpdate(this)">
+  <br/><br/><input id="Id" type="text" name="id" placeholder="id"><br/><br/><br/>
   <input type="text" name="name" placeholder="name"><br/><br/><br/>
   <input type="text" name="description" placeholder="description"><br/><br/><br/>
   <input type="submit" name="update" value="update">
